# stupidBenchmark

./: .gitmodules  CMakeLists.txt  README.md
src/: stupidScheduler.cpp
